testdata/baselines/reference/submodule/compiler/argumentsReferenceInMethod7_Js.errors.txt
/a.js(6,8): error TS2339: Property 'callee' does not exist on type 'A'.


==== /a.js (1 errors) ====
    class A {
    	m() {
    		/**
    		 * @type Function
    		 */
    		this.callee = arguments.callee;
    		     ~~~~~~
!!! error TS2339: Property 'callee' does not exist on type 'A'.
    	}
    }
    